--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,16 @@ async-timeout==4.0.3
 attrs==23.2.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.3
+blis==0.7.11
 bs4==0.0.2
 cachetools==5.3.2
+catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.4
+cymem==2.0.8
 dataclasses-json==0.6.4
 Deprecated==1.2.14
 dirtyjson==1.0.8
@@ -39,8 +44,11 @@ httpcore==1.0.3
 httpx==0.26.0
 idna==3.6
 importlib-metadata==7.0.1
+Jinja2==3.1.3
 joblib==1.3.2
 keras==2.13.1
+keras-models==0.0.7
+langcodes==3.3.0
 libclang==16.0.6
 llama-index==0.10.5
 llama-index-agent-openai==0.1.1
@@ -58,6 +66,7 @@ Markdown==3.5.2
 MarkupSafe==2.1.5
 marshmallow==3.20.2
 multidict==6.0.5
+murmurhash==1.0.10
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.1
@@ -65,10 +74,14 @@ nltk==3.8.1
 numpy==1.24.3
 oauthlib==3.2.2
 openai==1.12.0
+opencv-contrib-python==4.9.0.80
+opencv-python==4.9.0.80
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.0.3
+pathlib==1.0.1
 pillow==10.2.0
+preshed==3.0.9
 protobuf==4.25.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
@@ -85,10 +98,15 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.27
 sqlparse==0.4.4
+srsly==2.4.8
 teachable-machine==1.1
 tenacity==8.2.3
 tensorboard==2.13.0
@@ -97,12 +115,16 @@ tensorflow==2.13.1
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.4.0
+thinc==8.2.3
 tiktoken==0.6.0
 tqdm==4.66.2
+typer==0.9.0
 typing-extensions==4.9.0
 typing-inspect==0.9.0
 tzdata==2024.1
 urllib3==2.2.0
+wasabi==1.1.2
+weasel==0.3.4
 werkzeug==3.0.1
 wrapt==1.16.0
 yarl==1.9.4
