--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,70 @@
-absl-py==2.1.0
 aenum==3.1.15
 aiohttp==3.9.3
 aiosignal==1.3.1
+annotated-types==0.5.0
 anyio==4.2.0
+apturl==0.5.2
 asgiref==3.7.2
-astunparse==1.6.3
 async-timeout==4.0.3
 attrs==23.2.0
 backports.zoneinfo==0.2.1
+bcrypt==3.1.7
 beautifulsoup4==4.12.3
-blis==0.7.11
+blinker==1.4
+Brlapi==0.7.0
 bs4==0.0.2
-cachetools==5.3.2
-catalogue==2.0.10
+cachetools==4.0.0
 certifi==2024.2.2
+chardet==3.0.4
 charset-normalizer==3.3.2
+chrome-gnome-shell==0.0.0
 click==8.1.7
-cloudpathlib==0.16.0
-confection==0.1.4
-cymem==2.0.8
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
 dataclasses-json==0.6.4
+dbus-python==1.2.16
+defer==1.0.6
+demjson==2.2.4
 Deprecated==1.2.14
 dirtyjson==1.0.8
+distlib==0.3.7
 distro==1.9.0
-Django==4.2.10
-django-cors-headers==2.0.0
-django-utils-six==2.0
+distro-info==0.23+ubuntu1.1
+Django==4.2.5
+django-livereload-server==0.4
 djangorestframework==3.14.0
+duplicity==0.8.12.0
+entrypoints==0.3
 exceptiongroup==1.2.0
-flatbuffers==23.5.26
+fastapi==0.109.2
+fasteners==0.14.1
+filelock==3.12.4
+folder-color-common==0.0.88
 frozenlist==1.4.1
 fsspec==2024.2.0
-gast==0.4.0
-google-auth==2.28.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
+future==0.18.2
+google-api-python-client==1.7.11
+google-auth==1.5.1
+google-auth-httplib2==0.0.3
 gradientai==1.7.0
 greenlet==3.0.3
-grpcio==1.60.1
 h11==0.14.0
-h5py==3.10.0
 httpcore==1.0.3
+httplib2==0.14.0
 httpx==0.26.0
+hugchat==0.2.4
 idna==3.6
-importlib-metadata==7.0.1
-Jinja2==3.1.3
+importlib-metadata==1.5.0
+Jinja2==2.10.1
 joblib==1.3.2
-keras==2.13.1
-keras-models==0.0.7
-langcodes==3.3.0
-libclang==16.0.6
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+livereload==2.6.3
 llama-index==0.10.5
 llama-index-agent-openai==0.1.1
 llama-index-core==0.10.5
@@ -62,70 +77,116 @@ llama-index-multi-modal-llms-openai==0.1.1
 llama-index-program-openai==0.1.1
 llama-index-question-gen-openai==0.1.1
 llama-index-readers-file==0.1.3
-Markdown==3.5.2
-MarkupSafe==2.1.5
+load-dotenv==0.1.0
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==1.1.0
 marshmallow==3.20.2
+monotonic==1.5
+more-itertools==4.2.0
 multidict==6.0.5
-murmurhash==1.0.10
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+netifaces==0.10.4
 networkx==3.1
 nltk==3.8.1
-numpy==1.24.3
-oauthlib==3.2.2
+numpy==1.24.4
+oauth2client==4.1.2
+oauthlib==3.1.0
 openai==1.12.0
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
-opt-einsum==3.3.0
 packaging==23.2
 pandas==2.0.3
-pathlib==1.0.1
+paramiko==2.6.0
+pbr==5.11.1
+pexpect==4.6.0
 pillow==10.2.0
-preshed==3.0.9
-protobuf==4.25.3
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
+Pint==0.17
+platformdirs==3.10.0
+protobuf==3.6.1
+proton-core==0.1.16
+proton-keyring-linux==0.0.1
+proton-keyring-linux-secretservice==0.0.1
+proton-vpn-api-core==0.20.2
+proton-vpn-connection==0.11.0
+proton-vpn-gtk-app==4.1.3
+proton-vpn-killswitch==0.2.0
+proton-vpn-killswitch-network-manager==0.2.0
+proton-vpn-logger==0.2.1
+proton-vpn-network-manager==0.3.0
+proton-vpn-network-manager-openvpn==0.0.4
+proton-vpn-session==0.6.4
+psutil==5.5.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycairo==1.16.2
+pycups==1.9.73
 pydantic==1.10.14
+pydantic_core==2.6.3
+PyDrive==1.3.1
+PyGObject==3.36.0
+pyinotify==0.9.6
+PyJWT==1.7.1
+pymacaroons==0.13.0
 PyMuPDF==1.23.22
 PyMuPDFb==1.23.22
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
 pypdf==4.0.1
+pyRFC3339==1.1
+python-apt==2.0.1+zorin1
 python-dateutil==2.8.2
+python-debian==0.1.36+ubuntu1.1
 python-dotenv==1.0.1
+python-gnupg==0.4.5
+python-Levenshtein==0.12.0
 pytz==2024.1
+pyxdg==0.26
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
+requests-toolbelt==1.0.0
+requests-unixsocket==0.2.0
+rsa==4.0
+SecretStorage==2.3.1
+secure-smtplib==0.1.1
+simpleeval==0.9.11
+simplejson==3.16.0
 six==1.16.0
-smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
+speedtest-cli==2.1.3
 SQLAlchemy==2.0.27
 sqlparse==0.4.4
-srsly==2.4.8
-teachable-machine==1.1
+starlette==0.36.3
+stevedore==5.1.0
+tabulate==0.8.6
 tenacity==8.2.3
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.4.0
-thinc==8.2.3
 tiktoken==0.6.0
+tornado==6.3.3
 tqdm==4.66.2
-typer==0.9.0
-typing-extensions==4.9.0
 typing-inspect==0.9.0
+# typing_extensions==4.9.0
 tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+ulauncher==5.14.0
+unattended-upgrades==0.1
+uritemplate==0.6
 urllib3==2.2.0
-wasabi==1.1.2
-weasel==0.3.4
-werkzeug==3.0.1
+uvicorn==0.27.1
+virtualenv==20.24.5
+virtualenv-clone==0.5.7
+virtualenvwrapper==4.8.4
+wadllib==1.3.3
+watchdog==3.0.0
+websocket-client==0.53.0
 wrapt==1.16.0
+xkit==0.0.0
 yarl==1.9.4
-zipp==3.17.0
+zipp==1.0.0
+zorin-appearance==4.1
+zorin-connect==1.2
+zorin-exec-guard==1.5
