--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,8 @@ networkx==3.1
 nltk==3.8.1
 numpy==1.24.3
 oauthlib==3.2.2
-openai==1.12.0
+# openai==1.12.0
+openai==1.5.0
 opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
 opt-einsum==3.3.0
@@ -104,7 +105,8 @@ soupsieve==2.5
 spacy==3.7.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-SQLAlchemy==2.0.27
+# SQLAlchemy==2.0.27
+SQLAlchemy==2.0.20
 sqlparse==0.4.4
 srsly==2.4.8
 teachable-machine==1.1
@@ -119,7 +121,8 @@ thinc==8.2.3
 tiktoken==0.6.0
 tqdm==4.66.2
 typer==0.9.0
-typing-extensions==4.9.0
+# typing-extensions==4.9.0
+typing-extensions==4.5.0
 typing-inspect==0.9.0
 tzdata==2024.1
 urllib3==2.2.0
